--- a/efak-web/src/main/resources/templates/public/navbar.html
+++ b/efak-web/src/main/resources/templates/public/navbar.html
@@ -111,7 +111,7 @@
                     <div class="submenu">
                         <ul class="submenu-item">
                             <li class="nav-item"><a class="nav-link" href="/alert/channel" th:text="#{kafka.eagle.alert.channel}"></a></li>
-                            <li class="nav-item"><a class="nav-link" href="/alert/config" th:text="#{kafka.eagle.alert.config}"></a></li>
+                            <li class="nav-item"><a class="nav-link" href="/alert/rule" th:text="#{kafka.eagle.alert.rule}"></a></li>
                             <li class="nav-item"><a class="nav-link" href="/alert/info" th:text="#{kafka.eagle.alert.info}"></a></li>
                         </ul>
                     </div>
