--- a/efak-web/src/main/resources/templates/public/navbar.html
+++ b/efak-web/src/main/resources/templates/public/navbar.html
@@ -31,7 +31,7 @@
                             <li class="category-heading" th:text="#{kafka.eagle.topics.list}">Manager</li>
                             <li class="nav-item"><a class="nav-link" href="/topic/create" th:text="#{kafka.eagle.topics.create}">Create</a></li>
                             <li class="nav-item"><a class="nav-link" href="/topic/manage" th:text="#{kafka.eagle.topics.manager}">Manager</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#" th:utext="#{kafka.eagle.topics.ksql}">KSQL</a></li>
+<!--                            <li class="nav-item"><a class="nav-link" href="#" th:utext="#{kafka.eagle.topics.ksql}">KSQL</a></li>-->
                             <li class="nav-item"><a class="nav-link" href="/topic/mock" th:text="#{kafka.eagle.topics.mock}">Mock</a></li>
 <!--                            <span sec:authorize="isAuthenticated()">-->
 <!--                                <span sec:authorize="hasRole('ADMIN')">-->
