--- a/efak-web/src/main/resources/templates/public/header.html
+++ b/efak-web/src/main/resources/templates/public/header.html
@@ -133,7 +133,7 @@
                         </a>
                         <div class="dropdown-menu p-0" aria-labelledby="notificationDropdown">
                             <div class="px-3 py-2 d-flex align-items-center justify-content-between border-bottom">
-                                <p th:text="#{kafka.eagle.notify}">New Notifications</p>
+                                <p th:text="#{kafka.eagle.notify}"></p>
 <!--                                <a href="javascript:;" class="text-muted">Clear all</a>-->
                             </div>
                             <div class="p-1">
@@ -142,8 +142,8 @@
                                         <i class="icon-sm text-white" data-feather="gift"></i>
                                     </div>
                                     <div class="flex-grow-1 me-2">
-                                        <p>New Order Recieved</p>
-                                        <p class="tx-12 text-muted">30 min ago</p>
+                                        <p>alert message 1</p>
+                                        <p class="tx-12 text-muted">1 min ago</p>
                                     </div>
                                 </a>
                                 <a href="javascript:;" class="dropdown-item d-flex align-items-center py-2">
@@ -151,8 +151,8 @@
                                         <i class="icon-sm text-white" data-feather="alert-circle"></i>
                                     </div>
                                     <div class="flex-grow-1 me-2">
-                                        <p>Server Limit Reached!</p>
-                                        <p class="tx-12 text-muted">1 hrs ago</p>
+                                        <p>alert message 2</p>
+                                        <p class="tx-12 text-muted">5 min ago</p>
                                     </div>
                                 </a>
                                 <a href="javascript:;" class="dropdown-item d-flex align-items-center py-2">
@@ -160,8 +160,8 @@
                                         <i class="icon-sm text-white" data-feather="box"></i>
                                     </div>
                                     <div class="flex-grow-1 me-2">
-                                        <p>New customer registered</p>
-                                        <p class="tx-12 text-muted">2 sec ago</p>
+                                        <p>alert message 3</p>
+                                        <p class="tx-12 text-muted">8 min ago</p>
                                     </div>
                                 </a>
                                 <a href="javascript:;" class="dropdown-item d-flex align-items-center py-2">
@@ -169,8 +169,8 @@
                                         <i class="icon-sm text-white" data-feather="layers"></i>
                                     </div>
                                     <div class="flex-grow-1 me-2">
-                                        <p>Apps are ready for update</p>
-                                        <p class="tx-12 text-muted">5 hrs ago</p>
+                                        <p>alert message 4</p>
+                                        <p class="tx-12 text-muted">10 min ago</p>
                                     </div>
                                 </a>
                                 <a href="javascript:;" class="dropdown-item d-flex align-items-center py-2">
@@ -178,13 +178,13 @@
                                         <i class="icon-sm text-white" data-feather="download"></i>
                                     </div>
                                     <div class="flex-grow-1 me-2">
-                                        <p>Download completed</p>
-                                        <p class="tx-12 text-muted">6 hrs ago</p>
+                                        <p>alert message 5</p>
+                                        <p class="tx-12 text-muted">15 min ago</p>
                                     </div>
                                 </a>
                             </div>
                             <div class="px-3 py-2 d-flex align-items-center justify-content-center border-top">
-                                <a href="javascript:;">View all</a>
+                                <a href="javascript:;">更多详情</a>
                             </div>
                         </div>
                     </li>
